deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bk-website-service
spec:
  type: LoadBalancer
  selector:
    app: bk-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
