deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bk-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-brandonkorous
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - brandonkorous.com
      secretName: bk-website-tls
  rules:
    - host: brandonkorous.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bk-website-service
                port:
                  number: 80
